--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.10",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.0.5",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/mongoose": "^5.11.96",
     "axios": "^1.8.1",
@@ -39,7 +40,9 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
@@ -62,8 +65,10 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/date-fns": "^2.5.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
